feat: card components 완료
- sm, md, lg: 모든 방향 패딩 지정
- xl: parameter type 변경

이슈: S08P12C107-146

--- a/front/src/components/Cards/CardSm/CardSm.module.css
+++ b/front/src/components/Cards/CardSm/CardSm.module.css
@@ -3,16 +3,18 @@
     w-40 h-[5.4375rem]
     rounded-lg
   bg-white
-    pt-4
-    drop-shadow-md;
+    pt-4 pb-4 px-3
+    drop-shadow-md
+    flex flex-col
+    justify-between;
 }
 
 .SmTitle {
   @apply
-    mb-4 px-3
+    mb-4
     text-subheadline-bold;
 }
 
 .SmContents {
-  @apply  px-3 text-caption1;
+  @apply text-caption1;
 }
