--- a/front/src/components/Cards/CardLg/CardLg.module.css
+++ b/front/src/components/Cards/CardLg/CardLg.module.css
@@ -3,16 +3,18 @@
     w-[21.875rem] h-48
     rounded-lg
   bg-white
-    pt-5
-    drop-shadow-lg;
+    pt-5 pb-2 px-5
+    drop-shadow-lg
+    flex flex-col
+    justify-between;
 }
 
 .LgTitle {
   @apply
-    mb-6 px-5
+    mb-6
     text-title2-bold;
 }
 
 .LgContents {
-  @apply px-5 text-body;
+  @apply text-body;
 } 
