--- a/front/src/components/Cards/CardMd/CardMd.module.css
+++ b/front/src/components/Cards/CardMd/CardMd.module.css
@@ -3,16 +3,18 @@
     w-64 h-40
     rounded-lg
   bg-white
-    pt-10 
-    drop-shadow-lg;
+    pt-5 pb-2 px-4
+    drop-shadow-lg
+    flex flex-col
+    justify-between;
 }
 
 .MdTitle {
   @apply
-    mb-4 px-4
+    mb-4
     text-title3-bold;
 }
 
 .MdContents {
-  @apply px-4 text-footnote;
+  @apply text-footnote;
 }
