--- a/front/src/components/Cards/CardSm/CardSm.module.css
+++ b/front/src/components/Cards/CardSm/CardSm.module.css
@@ -1,6 +1,5 @@
 .SmBox {
-  @apply 
-    w-40 h-[5.4375rem]
+  @apply w-40 h-[5.4375rem]
     rounded-lg
   bg-white
     pt-4 pb-4 px-3
@@ -10,8 +9,7 @@
 }
 
 .SmTitle {
-  @apply
-    mb-4
+  @apply mb-4
     text-subheadline-bold;
 }
 
