--- a/front/src/components/Cards/CardXL/CardXL.module.css
+++ b/front/src/components/Cards/CardXL/CardXL.module.css
@@ -1,6 +1,5 @@
 .XLBox {
-  @apply 
-    w-[18.875rem] h-[30rem]
+  @apply w-[18.875rem] h-[30rem]
     rounded-lg
   bg-white
     p-3
@@ -10,8 +9,7 @@
 }
 
 .XLTitle {
-  @apply
-    mb-6
+  @apply mb-6
     text-title3-bold;
 }
 
