--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -1,6 +1,5 @@
 :root {
-  font-family:
- -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo',
+  font-family: -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo',
     'Pretendard Variable', Pretendard, Roboto, 'Noto Sans KR', 'Segoe UI',
     'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
     sans-serif;
