feat: 404 error page 제작 완료
- 잘못된 주소 입력시 해당 페이지로 이동
- 다른 페이지들과 달리 rootlayout에 포함되지 않음
    - navtop 완성시 별도로 넣어줘야함

이슈: S08P12C107-157

--- a/front/src/styles/pages/NotFoundPage.module.css
+++ b/front/src/styles/pages/NotFoundPage.module.css
@@ -1,8 +1,26 @@
+.Wrapper {
+  @apply 
+    flex flex-col 
+    justify-between 
+    h-screen 
+    pt-12 pb-14 px-5;
+}
+
 .Header {
   @apply
-    text-title1-bold;
+    text-title1-bold
+    mt-12;
 }
 
 .Content {
-  @apply text-body;
+  @apply 
+    text-body
+    mt-10 px-2;
+}
+
+.NavBottom {
+  @apply 
+    flex 
+    justify-center
+    mb-11;
 }
