feat: 봉사 신청 페이지 외관 완료
- 외관 완료
- 폼작성 연결 필요

이슈: S08P12C107-157

--- a/front/src/components/Cards/CardSm/CardSm.module.css
+++ b/front/src/components/Cards/CardSm/CardSm.module.css
@@ -4,12 +4,11 @@
   bg-white
     pt-4 pb-4 px-3
     drop-shadow-md
-    flex flex-col
-    justify-between;
+    flex flex-col justify-center;
 }
 
 .SmTitle {
-  @apply mb-4
+  @apply mb-3 flex justify-center
     text-subheadline-bold;
 }
 
