--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -1,10 +1,15 @@
 :root {
-  font-family:
- -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo',
+  font-family: -apple-system, BlinkMacSystemFont, 'Apple SD Gothic Neo',
     'Pretendard Variable', Pretendard, Roboto, 'Noto Sans KR', 'Segoe UI',
     'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
     sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
