--- a/front/src/components/Modal/Modal.module.css
+++ b/front/src/components/Modal/Modal.module.css
@@ -4,7 +4,7 @@
     top-0 left-0
     w-full h-full
     bg-black bg-opacity-40
-    flex justify-center;
+    flex justify-center z-10;
 }
 
 .Body {
