--- a/front/src/styles/global.css
+++ b/front/src/styles/global.css
@@ -14,3 +14,23 @@ input::-webkit-inner-spin-button {
   appearance: none;
   margin: 0;
 }
+
+.ck-editor__editable {
+  min-height: 400px;
+  border-radius: 10px;
+
+  /* max-height: 800px; */
+
+  /* max-width: 400px; */
+
+  /* max-width: 860px; */
+}
+
+/* Toolbar */
+
+.ck-editor__top {
+  /* max-width: 400px; */
+  
+
+  /* max-width: 860px; */
+}
