!HOT_FIX: 로딩창안끝나는 문제, 단체 모달 안에 기본 이미지 추가
이슈: S08P12C107-303

--- a/front/src/components/Loading/LoadingBase.module.css
+++ b/front/src/components/Loading/LoadingBase.module.css
@@ -18,7 +18,7 @@
   @apply
     rotate-12 ml-14 animate-ping;
 
-    animation: fadein-top 3s;
+    animation: fadein-top 1350ms;
     animation-iteration-count: infinite;
     animation-fill-mode: both;
   }
@@ -27,7 +27,7 @@
     @apply
     -rotate-12 mr-14;
     
-    animation: fadein-middle 3s;
+    animation: fadein-middle 1350ms;
     animation-iteration-count: infinite;
     animation-fill-mode: both;
   }
@@ -36,7 +36,7 @@
     @apply
     rotate-12 ml-14;
     
-    animation: fadein-low 3s;
+    animation: fadein-low 1350ms;
     animation-iteration-count: infinite;
     animation-fill-mode: both;    
   }
